--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "lyriccli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "bin/index.js",
   "bin": {
-  "lyriccli": "bin/index.js"
+    "lyriccli": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,12 +12,13 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@clack/prompts": "^0.11.0",
     "axios": "^1.10.0",
     "chalk": "^5.4.1",
     "commander": "^14.0.0",
+    "dotenv": "^17.0.1",
     "figlet": "^1.8.1",
     "gradient-string": "^3.0.0",
     "inquirer": "^12.7.0"
